# website

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  tailwind.config.cjs  wrangler.jsonc
about/: index.html
docs/: about.md  index.md  showcase.md
projects/: index.html
search/: search_index.json
showcase/: index.html
src/: App.vue  main.js
src/assets/css/: styles.css
src/components/: About.vue  Hero.vue  NavBar.vue  Pets.vue  Portfolio.vue  Skills.vue
src/icons/: IconDarkMode.vue  IconEmail.vue  IconGithub.vue  IconLinkedIn.vue  IconResume.vue
