[tool.poetry]
name = "website"
version = "0.0.1"
description = "My Personal Website"
authors = ["Hayden Richards <SupImDos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
poethepoet = "^0.13.0"
mkdocs-material = "^8.2.3"

[tool.poe.tasks]
build = "mkdocs build"
serve = "mkdocs serve"
publish = "mkdocs gh-deploy --force"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
